--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
 body{
     background-color: lightgray;
-}
-
-footer{
-    position: fixed;
-    bottom: 10px;
+    position:relative;
 }
 
 header{
     background-color: darkgray;
-    padding:10px;
+    padding:50px;
+    position: relative;
 }
 
 footer{
     background-color: darkgray;
+    position:fixed;
     width:100%;
-    padding:15px;
+    height:30px;
     bottom:0px;
     left:0px;
+}
+
+img{
+    float:right;
+    height:150px;
+    top:20px;
+}
+
+header{
+    position:relative;
 }
