FIKSA FOOTERgit status!

--- a/main/css/style.css
+++ b/main/css/style.css
@@ -20,13 +20,6 @@ h1,h2,h3,h4 {
 	font-family: "Bodoni 72 Smallcaps Book", Arial, sans-serif;
 }
 
-#logo {
-	width: 250px;
-	border-radius: 50%;
-	padding: 3px;
-	background-color: whitesmoke;
-}
-
 header {
 	font-family: "Bodoni 72 Smallcaps Book", Arial, sans-serif;
 }
@@ -42,6 +35,7 @@ header{
 	padding-bottom: 15px;
 }
 
+/*Navbar styling*/
 nav {
 	display: flex;
 	flex-direction: row;
@@ -50,6 +44,13 @@ nav {
 	border-top: #faa21b 1px solid;
 }
 
+nav div{
+	width: 1px;
+	height: 20px;
+	background-color: #faa21b; 
+}
+
+/*Zoom på knappan on hover*/
 nav a{
 	transition: transform .2s ease-out;
 }
@@ -59,36 +60,24 @@ nav a:hover {
 	
 }
 
-
-nav div{
-	width: 1px;
-	height: 20px;
-	background-color: #faa21b; 
+/*logo styling*/
+#logo {
+	width: 250px;
+	border-radius: 50%;
+	padding: 3px;
+	background-color: whitesmoke;
 }
-
-img {
-	width: 40%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*Artikkel styling*/
 article{
 	margin: auto;
 	width: 65%
 }
+
+article img{
+	width: 40%
+}
+
 /*
 h1, h2, h3{
 	font-family: Arial, Helvetica, sans-serif;
@@ -101,8 +90,21 @@ header *, footer *{
 }
 
 /*Footer styling*/
-footer{
-    padding: 15px;
+html, body {
+	min-height:100%;
+	position:relative;
+}
+
+/*DEN FUCKINGS MAGIEN E SKREIV SOM FIKK FOOTERN TE Å HOLD SEG PÅ BUNNEN! https://youtu.be/lr6sTZjnHJA?t=2*/
+body {
+   padding-bottom: 45px; 
+}
+
+footer {
+	position:absolute;
+    width: 100%;
+    padding: 15px 0 15px 0;
+	top: calc(max(100%, 100vh) - 45px);/*I've been looking at this for four hours now, it's beautiful*/
 }
 
 footer p {
@@ -110,28 +112,25 @@ footer p {
 	font-size: 0.8em;
 }
 
-/*Logo styling
-#logo{
-	float: right;
-    height: 150px;
 
-}
-*/
 /*Gule punkt*/
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 ul li::before {
-  content: "\2022";
-  color: #043b7c;
-  font-weight: bold;
-  display: inline-block;
-  width: 1em;
-  margin-left: -1em;
+	content: "\2022";
+	color: #043b7c;
+	font-weight: bold;
+	display: inline-block;
+	width: 1em;
+	margin-left: -1em;
 }
 
 /*Fjerner underline på tekstlenke*/
 a:link {
 	text-decoration: none;
-  }
+}
+
+
+
