--- a/main/css/style.css
+++ b/main/css/style.css
@@ -58,6 +58,7 @@ nav a:hover {
 	border-radius: 50%;
 	padding: 3px;
 	background-color: whitesmoke;
+	margin-bottom: 20px;
 }
 
 /*Artikkel styling*/
@@ -65,6 +66,11 @@ article{
 	margin: auto;
 	width: 65%
 }
+
+h2:first-child{
+	text-align: center;
+}
+
 /*Alle bilder i articles UTENOM Henrik or Not*/
 article:not(#henrik_or_not) img{
 	width: 40%
@@ -239,6 +245,13 @@ input:hover[type="submit"] {
 }
 					/*SLUT PÅ HENRIK_OR_NOT.HTML - daniel*/
 
+					/*BLI EN HENRIK - Jakob*/
+
+#meldInn{
+	text-align: center;
+}
+
+					/*SLUTT PÅ BLI EN HENRIK - Jakob*/
 
 
 
