--- a/main/css/style.css
+++ b/main/css/style.css
@@ -343,7 +343,7 @@ background:
 	),
 	url(/media/images/instaboksBilder/henrikOrNotGuleTomler.png)
 							/* ***************** FORSIDE - INDEX.HTML - MORTEN ******************* */
-
+}
 
 
 
@@ -351,7 +351,7 @@ background:
 	text-align: left;
 	margin: 50px;
 	}
-	
+
 	#forsideInfo > h1 {
 	text-align: left;
 	margin-bottom: -10px;
