--- a/main/css/style.css
+++ b/main/css/style.css
@@ -332,7 +332,13 @@ input[type=text] {
 	margin: 10px auto;
 	background: #f7f7f7;
 }
-
+form, h2 {
+	font-size: 140%;
+	font-weight: 250;
+	text-align: center;
+	background: lightblue;
+	color: #fff;
+}
 
 
 
