--- a/main/css/style.css
+++ b/main/css/style.css
@@ -336,8 +336,22 @@ form, h2 {
 	font-size: 140%;
 	font-weight: 250;
 	text-align: center;
-	background: lightblue;
-	color: #fff;
+	background: darkblue;
+	color:black;
+}
+input[type=text], input[type=number], input[type=checkbox], input[type=button], textarea, select
+{
+	outline: none;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	width: 100%;
+	background: #fff;
+	margin-bottom: 4%;
+	border: 1px solid #ccc;
+	padding: 3%;
+	color: #555;
+	font: 95% Arial, Helvetica, sans-serif;	
 }
 
 
