--- a/main/css/style.css
+++ b/main/css/style.css
@@ -324,6 +324,37 @@ input[type=number], select, textarea {
 	resize: vertical;
 }
 ***/
+input[type=text], input[type=number] {
+	font: 95% Arial, times, sans-serif;
+	max-width: 400px;
+	background: #f7f7f7;
+}
+form, h2 {
+	font-size: 140%;
+	font-weight: 250;
+	text-align: center;
+	color:black;
+}
+input[type=text], input[type=number], input[type=checkbox], textarea, select
+{
+	outline: none;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	width: 100%;
+	background: #fff;
+	margin-bottom: 4%;
+	border: 1px solid #ccc;
+	padding: 3%;
+	color: #555;
+	font: 95% Arial, Helvetica, sans-serif;	
+}
+input[type=text]:focus, input[type=number]:focus, input[type=checkbox]:focus, textarea:focus, select:focus
+{
+	border: 1px solid yellow;
+	box-shadow: 0 0 5px yellow;
+}
+
 
 
 
