--- a/main/css/style.css
+++ b/main/css/style.css
@@ -353,6 +353,7 @@ input[type=text]:focus, input[type=number]:focus, input[type=checkbox]:focus, te
 {
 	border: 1px solid yellow;
 	box-shadow: 0 0 5px yellow;
+	padding: 25%;
 }
 
 
