--- a/main/css/style.css
+++ b/main/css/style.css
@@ -339,11 +339,13 @@ input[type=text], input[type=number], input[type=checkbox], textarea, select
 {
 	outline: none;
 	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	width: 100%;
 	background: #fff;
-	border: 1px solid #ccc;
+	border: 1px solid white;
 	color: #555;
-	font: 95% Arial, Helvetica, sans-serif;	
+	font: 95% Arial, times, sans-serif;	
 }
 input[type=text]:focus, input[type=number]:focus, input[type=checkbox]:focus, textarea:focus, select:focus
 {
