--- a/main/css/style.css
+++ b/main/css/style.css
@@ -328,6 +328,8 @@ input[type=text], input[type=number] {
 	font: 95% Arial, times, sans-serif;
 	max-width: 450px;
 	background: #f7f7f7;
+	padding: 15%;
+	margin: 1px auto;
 }
 form, h2 {
 	font-size: 140%;
@@ -343,8 +345,10 @@ input[type=text], input[type=number], input[type=checkbox], textarea, select
 	-moz-box-sizing: border-box;
 	width: 100%;
 	background: #fff;
+	margin-bottom: 5%;
 	border: 1px solid white;
 	color: #555;
+	padding: 3%;
 	font: 95% Arial, times, sans-serif;	
 }
 input[type=text]:focus, input[type=number]:focus, input[type=checkbox]:focus, textarea:focus, select:focus
