--- a/main/css/style.css
+++ b/main/css/style.css
@@ -329,7 +329,6 @@ input[type=text], input[type=number] {
 	max-width: 450px;
 	background: #f7f7f7;
 	padding: 15%;
-	margin: 1px auto;
 }
 form, h2 {
 	font: "Bodoni 72 Smallcaps Book", "Playfair Display SC", sans-serif, bolder;
@@ -361,9 +360,11 @@ input[type=text]:focus, input[type=number]:focus, input[type=checkbox]:focus, te
 {
 	box-shadow: 0 0 5px #043b7c;
 	border: 3px solid #043b7c;
-	padding: 5%;
+	padding: 1.5%
 
 }
+
+
 
 
 
