--- a/main/css/style.css
+++ b/main/css/style.css
@@ -689,6 +689,56 @@ background:
 		padding-right: 20px;
 	}
 }
+/*when widescreen and height <600px
+@media screen and (min-width:800px){*/
+@media screen and (max-height:600px){
+	#logo {
+		width: 75px;
+		border-radius: 50%;
+		padding: 0.7px;
+		background-color: whitesmoke;
+		margin-bottom: 20px;
+		transition: transform .2s ease-out;
+		float: left;
+		display:block;
+	}
+	header {
+		height:25px;
+		padding-top: 7px;
+	}
+	.topnav {
+		border-top: none;
+		padding-top: 7px;
+	}
+
+	@media screen and (max-width:800px) {
+		.bars{
+			position: relative;
+			float:right;
+		}
+		.cross{
+			position: relative;
+			float:right
+		}
+		.topnav.responsive {
+			z-index: 1;
+			position: absolute;
+			right:0px;
+			top:40px;
+			border-radius: 0.5em;
+			padding-top: 0px;
+			left:100vw;
+			transform: translate(-230px);
+		}
+	}
+}
+
+
+
+
+
+
+
 /*to do responsive design:
 -- fikse henrik or not
 -- lavere meny med page height <600px
