--- a/main/css/style.css
+++ b/main/css/style.css
@@ -481,126 +481,102 @@ background:
 #forsideInfo {
 	text-align: left;
 	margin: 50px;
-	}
+}
 
-	#forsideInfo > h1 {
-	text-align: left;
-	margin-bottom: -10px;
-	}
-	
-	/* instabokser */
-	
-	.boksgrid {
-	margin-left: -50px;
-	margin-top: -20px;
-	}
-	
-	.instaboksseksjon {
+#forsideInfo > h1 {
+text-align: left;
+margin-bottom: -10px;
+}
+
+.bokseseksjon {
 	position: relative;
-	margin-top: -30px;
-	margin-left: 50px;
-	display: table;
-	max-width: 960px;
-	text-align: left;
-	}
-	
-	.boksgrid li {
-	width: 200px;
-	height: 200px;
-	display: inline-block;
-	margin: 10px;
-	
-	}
-	
-	.instaboks {
+	height: 300px;
 	width: 100%;
-	height: 100%;
-	position: relative;
-	cursor: pointer;
-	border-style: solid;
-	border-color: #043b7c ;
-	transition: 0.3s ease-in-out
-	
-	}
-	
-	.instaboks:hover {
-	transform: scale(1.05); 
-	}
-	
-	
-	.bokstekst h3 {
-	text-align: center;
-	font-weight: bold;
-	position: relative;
-	margin-top: 5px;
-	color: black;
-	font-size: 25px;
-	
-	}
-	
-	
-	
-	
-	
-	/*bakgrunnsbilder */
-	
-	
-	
-	.etymologi { 
-	background: 
-		linear-gradient(
-			rgba(0, 0, 0, 0.10), 
-			rgba(0, 0, 0, 0.10)
-		),
-		url(/main/media/images/instaboksBilder/guleTomler200.png)
-	}
-	
-	.historiskeHenriker { 
-	background: 
-		linear-gradient(
-			rgba(0, 0, 0, 0.10), 
-			rgba(0, 0, 0, 0.10)
-		),
-		url(/main/media/images/instaboksBilder/guleTomler200.png)
-	}
-	
-	.henrikOrNot { 
-	background: 
-		linear-gradient(
-			rgba(0, 0, 0, 0.10), 
-			rgba(0, 0, 0, 0.10)
-		),	
-		url(/main/media/images/instaboksBilder/guleTomler200.png)
-	
-	}
-	
-	.sitater { 
-	background: 
-		linear-gradient(
-			rgba(0, 0, 0, 0.10), 
-			rgba(0, 0, 0, 0.10)
-		),
-		url(/main/media/images/instaboksBilder/guleTomler200.png)
-	
-	}
-	
-	/* Sign up */
-	
-	#signUp {
-	text-align: left;
 	margin: 50px;
-	margin-top: 70px;
-	}
+}
+.bokseseksjon h2 {
+	text-align: left;
+	font-size: 1.5em;
+	margin-bottom: -5px;
+}
 
-	#signUp:hover {
-		font-size: x-large;
-	}
+.boksestyle {
+	border: solid;
+	border-color: #043b7c;
+	background-color: white;
+	height: 200px;
+	width: 200px;
+	display: inline-block;
+	text-align: center;
+	margin: 3px;
+}
+
+.bokseseksjon h1 {
+	font-size: 1.12em;
+	color: black;
+}
+
+.boksestyle:hover {
+	transform: scale(1.025);
+	transition: 0.2s ease-in-out;
+}
+
+/*Ikoner*/
+
+#etymologiboks {
+	background: url(/main/media/images/forsideikoner/ikonEtymologi.jpg);
+	background-position: center;
+	height: 100%;
+	margin-top: -6%;
+}
+
+#historiskehenrikerboks {
+	background: url(/main/media/images/forsideikoner/ikonHistorie320.png);
+	background-size: 86%;
+	background-position: center;
+	height: 100%;
+	margin-top: -7%;
+}
+
+#henrikornotboks {
+	background: url(/main/media/images/forsideikoner/ikonHenrikOrNot320.png);
+	background-size: 88%;
+	background-position: center;
+	background-position-y: 250%;
+	height: 100%;
+	margin-top: -6%;
+}
+
+#sitaterboks {
+	background: url(/main/media/images/forsideikoner/ikonHenrikSitater.png);
+	background-position: center;
+	background-size: 90%;
+	height: 100%;
+	margin-top: -7%;
+}
 .bars {
 	display:none;
 }
 .cross {
 	display:none;
 }
+
+
+#blienhenriklink a h1 {
+	color: #faa21b;
+	background-color: #043b7c;
+	text-align: center;
+	position: relative;
+	margin-top: 60px;
+	width: 400px;
+	font-size: 200%;
+
+}
+
+#blienhenriklink a h1:hover {
+	background: rgb(0, 25, 139);
+}
+						
 			/******** RESPONSIVE DESIGN - DANIEL *********/
 /*dropdown nav*/
 /*when width <800px*/
