--- a/main/css/style.css
+++ b/main/css/style.css
@@ -479,14 +479,14 @@ margin-bottom: -10px;
 /*Ikoner*/
 
 #etymologiboks {
-	background: url(/main/media/images/forsideikoner/ikonEtymologi.jpg);
+	background: url(../media/images/forsideikoner/ikonEtymologi.jpg);
 	background-position: center;
 	height: 100%;
 	margin-top: -6%;
 }
 
 #historiskehenrikerboks {
-	background: url(/main/media/images/forsideikoner/ikonHistorie320.png);
+	background: url(../media/images/forsideikoner/ikonHistorie320.png);
 	background-size: 86%;
 	background-position: center;
 	height: 100%;
@@ -494,7 +494,7 @@ margin-bottom: -10px;
 }
 
 #henrikornotboks {
-	background: url(/main/media/images/forsideikoner/ikonHenrikOrNot320.png);
+	background: url(../media/images/forsideikoner/ikonHenrikOrNot320.png);
 	background-size: 88%;
 	background-position: center;
 	background-position-y: 250%;
@@ -503,7 +503,7 @@ margin-bottom: -10px;
 }
 
 #sitaterboks {
-	background: url(/main/media/images/forsideikoner/ikonHenrikSitater.png);
+	background: url(../media/images/forsideikoner/ikonHenrikSitater.png);
 	background-position: center;
 	background-size: 90%;
 	height: 100%;
