--- a/main/css/style.css
+++ b/main/css/style.css
@@ -620,9 +620,9 @@ margin-bottom: -10px;
 		padding-right: 20px;
 	}
 }
-/*when widescreen and height <600px
+/*when widescreen and height <700
 @media screen and (min-width:800px){*/
-@media screen and (max-height:600px){
+@media screen and (max-height:700px){
 	#logo {
 		width: 75px;
 		border-radius: 50%;
@@ -672,4 +672,3 @@ margin-bottom: -10px;
 
 /*to do responsive design:
 -- fikse henrik or not
--- lavere meny med page height <600px
