--- a/main/css/style.css
+++ b/main/css/style.css
@@ -523,9 +523,9 @@ margin-bottom: -10px;
 	text-align: center;
 	position: relative;
 	margin-top: 60px;
-	width: 400px;
+	width: 500px;
 	font-size: 200%;
-
+	padding:10px;
 }
 
 #blienhenriklink a h1:hover {
@@ -618,6 +618,16 @@ margin-bottom: -10px;
 		font-size: 30px;
 		text-align: right;
 		padding-right: 20px;
+	}
+	#blienhenriklink a h1 {
+		color: #faa21b;
+		background-color: #043b7c;
+		text-align: center;
+		position: relative;
+		margin-top: 60px;
+		width: 50%;
+		font-size: 200%;
+		padding:10px;
 	}
 }
 /*when widescreen and height <700
