--- a/main/css/style.css
+++ b/main/css/style.css
@@ -216,6 +216,7 @@ input:hover[type="submit"] {
 	border:none;
 	vertical-align:middle;
 	padding-bottom: 10px;
+	text-align: left;
 }
 /*Styling og posisjonering for hele articelen*/
 #henrik_or_not {
